--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -15,7 +15,8 @@ mat-cell:first-of-type {
 }
 .mat-column-ExamName,
 .mat-column-StartDate,
-.mat-column-EndDate
+.mat-column-EndDate,
+.mat-column-ClassGroupId
 {
     flex:1 0 135px;
 }
