--- a/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.scss
+++ b/src/app/modules/appconfigdata/userreportconfigColumns/userreportconfigcolumns.component.scss
@@ -1,17 +1,18 @@
 mat-form-field{
-    flex:1 1 100%;
-    margin-right: 15px;
-    
+    width:98%;
+    margin-right: 15px;    
 }
 
-.mat-column-DisplayName,.mat-column-Formula,.mat-column-ReportName{
-    flex: 1 1 10%;
+.mat-column-DisplayName,
+.mat-column-Formula,.mat-column-ReportName{
+    flex: 1 1 150px;
 }
 .mat-column-TableNames{
     flex:1 1 100px;
 }
-.mat-column-ColumnSequence,.mat-column-Active{
-    flex:1 1 4%;
+.mat-column-ColumnSequence,
+.mat-column-Active{
+    flex:1 0 100px;
     justify-content: center;
 }
 // mat-cell:first-of-type{
