--- a/src/app/modules/globaladmininvoice/reportconfigitem/reportconfigitem.component.scss
+++ b/src/app/modules/globaladmininvoice/reportconfigitem/reportconfigitem.component.scss
@@ -1,21 +1,22 @@
-mat-form-field,button{
-    flex:1 1 100%;
-    margin-right: 15px;
-    
+mat-form-field{
+    width:98%;
+    margin-right: 15px;    
 }
 
-.mat-column-DisplayName,.mat-column-Formula,.mat-column-ReportName{
+.mat-column-DisplayName,.mat-column-Formula,.mat-column-ReportName
+{
     flex: 1 1 150px;
 }
 .mat-column-TableNames{
-    flex: 1 1 250px;
+    flex: 1 0 250px;
 }
-.mat-column-ColumnSequence{
-    flex:1 1 50px;
+.mat-column-ColumnSequence,
+.mat-column-Active,
+.mat-column-Action{
+    
+    flex:1 0 100px;
 }
-.mat-column-Active{
-    justify-content: center;
-}
+
 mat-cell:first-of-type{
     padding-left: 0px;
 }
