--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.html
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.html
@@ -12,7 +12,7 @@
                         {{item.applicationName}}</mat-option>
                 </mat-select>
             </mat-form-field>
-            <span *ngIf="SelectedAppName=='Education Management'">
+            <span>
                 <mat-form-field [style.width.px]="130" appearance="outline">
                     <mat-label>Batch</mat-label>
                     <mat-select formControlName="searchBatchId">
