--- a/src/app/modules/studentexam/verifyresultstatus/verifyresultstatus.component.html
+++ b/src/app/modules/studentexam/verifyresultstatus/verifyresultstatus.component.html
@@ -15,14 +15,14 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field appearance="outline" [style.width.px]="200">
+                <!-- <mat-form-field appearance="outline" [style.width.px]="200">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId">
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
                     </mat-select>
-                </mat-form-field>
+                </mat-form-field> -->
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetExamStudentResults()">
                     <mat-icon>search</mat-icon>
                 </button>
