--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -61,9 +61,9 @@
                         </button>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="StudentId" [style.width.px]="30">
-                    <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
-                    <mat-cell *matCellDef="let element"> {{element.StudentId}} </mat-cell>
+                <ng-container matColumnDef="PID" [style.width.px]="30">
+                    <mat-header-cell *matHeaderCellDef>PID</mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.PID}} </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Name">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
