--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
@@ -13,12 +13,12 @@ mat-form-field{
 }
 .mat-column-Active,.mat-column-Action{
     justify-content: center;
-    flex:1 1 100px
+    flex:1 0 110px
 }
 .mat-column-PhoneNumber,.mat-column-ValidFrom,.mat-column-ValidTo,.mat-column-ContactNo{
     flex:1 1 140px;
 }
-.mat-column-ClassName,.mat-column-EmailAddress{
+.mat-column-UserName,.mat-column-EmailAddress{
     flex:1 1 250px;
 }
 mat-cell:first-of-type{
